# VeryFastChat

./: .env.example  .gitignore  Makefile  README.md
.github/workflows/: ci.yml  monitoring.yml
apps/api/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  start.sh
apps/api/app/: auth.py  config.py  db.py  error_tracking.py  main.py  metrics.py  rate_limit.py  schemas.py  session.py
apps/api/app/routes/: profile.py  rooms.py
apps/api/app/services/: profile.py
apps/api/tests/: __init__.py  conftest.py  test_auth.py  test_health.py  test_profile_validation.py  test_rooms.py  test_security.py
apps/web/: .env.example  instrumentation-client.ts  next.config.js  package-lock.json  package.json  playwright.config.ts  sentry.edge.config.ts
apps/web/app/: ThemeProvider.tsx  error.tsx  global-error.tsx  layout.tsx  not-found.tsx  page.tsx  styles.css
apps/web/app/admin/: page.tsx
apps/web/app/auth/callback/: page.tsx
apps/web/app/auth/reset-password/: page.tsx
apps/web/app/components/: AppShell.tsx  ErrorBoundary.tsx  HealthPing.tsx  Logo.tsx  PendingMessagesFlush.tsx  RegisterSw.tsx  SignInModal.tsx  UserProfileDropdown.tsx
apps/web/app/contexts/: AuthContext.tsx
apps/web/app/my-rooms/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/e2e/: chat.spec.ts  room-flow.spec.ts  smoke.spec.ts  ui.spec.ts
apps/web/lib/: api-client.ts  api.ts  joinedRooms.ts  pendingMessages.ts  supabase.ts
apps/web/public/: manifest.json  offline.html  robots.txt  sw.js
docs/: blueprint.md  deployment.md  production-checklist.md
(+1 files in other folders)
